--- a/Main.css
+++ b/Main.css
@@ -297,13 +297,20 @@ body {
     z-index: 9;
     top: 200px;
     left: 400px;
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
 }
 #RandomMover2 {
     z-index: 9;
     top: 600px;
     left: 400px;
+    width: 20px;
+    height: 20px;
+}
+#RandomMover3 {
+    z-index: 9;
+    top: 100px;
+    left:3400px;
     width: 20px;
     height: 20px;
 }
