--- a/Main.css
+++ b/Main.css
@@ -46,6 +46,13 @@ body {
     
 }
 
+#homeenter{
+    width: 25px;
+    height: 20px;
+    top: 126px;
+    left: 100px;
+}
+
 #Cilveeks {
     z-index: 9;
     width: 20px;
@@ -56,6 +63,16 @@ body {
     left: 100px;
 }
 #Cilveeks1 {
+    z-index: 9;
+    width: 20px;
+    height: 20px;
+    background-image: url(Cilv.png);
+    position: absolute;
+    top: 160px;
+    left: 100px;
+}
+
+#Cilveeks2 {
     z-index: 9;
     width: 20px;
     height: 20px;
@@ -240,7 +257,7 @@ body {
     left: 300px;
 }
 #caveenter {
-    background-color: black;
+    background-image: url(Caveenter.png);
     width: 125px;
     height: 125px;
     top: 300px;
@@ -253,11 +270,31 @@ body {
     left: 698px;
 }
 
+#HomeField {
+    display: flex;
+    position: center;
+    width: 800px;
+    height: 800px;
+    position: relative;
+    margin: 20px auto;
+    background-color: rgb(252, 184, 82);
+    box-shadow: 0 0 25px 30px rgb(252, 184, 82);
+    
+}
+
+#homeleave {
+    background-color: black;
+    width: 125px;
+    height: 1px;
+    top: 799px;
+    left: 300px;
+}
+
 #CaveField {
     display: none;
     display: flex;
     position: center;
-    width: 1200px;
+    width: 800px;
     height: 800px;
     position: relative;
     margin: 20px auto;
@@ -306,13 +343,6 @@ body {
     left: 400px;
     width: 20px;
     height: 20px;
-}
-#RandomMover3 {
-    z-index: 9;
-    top: 220px;
-    left: 400px;
-    width: 60px;
-    height: 60px;
 }
 #rock7 {
     position: absolute;
