--- a/Main.css
+++ b/Main.css
@@ -2,38 +2,55 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(Clouds.jpg)
-  }
-  
-  .topnavbar {
+}
+
+.topnavbar {
     background-color: black;
     z-index: 10;
     position: sticky;
     top: 0;
     overflow: hidden;
     width: 350px;
-  }
-  
-  .topnavbar a {
+}
+
+.topnavbar a {
     float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
-  
-  .topnav a:hover {
+}
+
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  .topnav a.active {
+}
+
+.topnav a.active {
     background-color: #04AA6D;
     color: white;
-  }
+}
+
+
+
+
+
+
+
+
+
+
 
 /*Spēle*/
 
+
+
+
+
+
+
+/*Sākuma lauks*/
 #MainField {
     display: flex;
     position: center;
@@ -43,10 +60,10 @@ body {
     margin: 20px auto;
     background-color: rgb(65, 212, 65);
     box-shadow: 0 0 25px 30px rgb(65, 212, 65);
-    
+
 }
 
-#homeenter{
+#homeenter {
     width: 25px;
     height: 20px;
     top: 126px;
@@ -62,6 +79,7 @@ body {
     top: 160px;
     left: 100px;
 }
+
 #Cilveeks1 {
     z-index: 9;
     width: 20px;
@@ -96,7 +114,7 @@ body {
     position: absolute;
     top: 200px;
     left: 510px;
-    box-shadow : 0px 0px 2px 7.5px  rgb(142, 93, 66);
+    box-shadow: 0px 0px 2px 7.5px rgb(142, 93, 66);
 }
 
 #water1 {
@@ -106,8 +124,9 @@ body {
     height: 100px;
     top: 200px;
     left: -40px;
-    box-shadow : 6.5px 0px 2.75px 6px  rgb(121, 78, 23);
+    box-shadow: 6.5px 0px 2.75px 6px rgb(121, 78, 23);
 }
+
 #water2 {
     z-index: 6;
     background-color: rgb(63, 72, 204);
@@ -115,7 +134,7 @@ body {
     height: 100px;
     top: 200px;
     left: 600px;
-    box-shadow : -6px 0px 2.75px 6px  rgb(121, 78, 23);
+    box-shadow: -6px 0px 2.75px 6px rgb(121, 78, 23);
 }
 
 #tree1 {
@@ -125,7 +144,27 @@ body {
     top: 50px;
     left: 300px;
 }
-#leaves1 { 
+
+#tree2 {
+    background-color: rgb(172, 112, 33);
+    width: 80px;
+    height: 80px;
+    top: 650px;
+    left: 500px;
+}
+
+#leaves2 {
+    position: absolute;
+    z-index: 9;
+    background-color: rgb(3, 110, 3);
+    width: 250px;
+    height: 250px;
+    top: 560px;
+    left: 410px;
+    opacity: 0.8;
+}
+
+#leaves1 {
     position: absolute;
     z-index: 9;
     background-color: rgb(3, 110, 3);
@@ -134,6 +173,53 @@ body {
     top: 20px;
     left: 270px;
     opacity: 0.5;
+}
+
+#s1 {
+    top: 300px;
+    left: -30px;
+    width: 100px;
+    height: 100px;
+}
+
+#s2 {
+    top: 300px;
+    left: 70px;
+    width: 100px;
+    height: 100px;
+}
+
+#s3 {
+    top: 400px;
+    left: -30px;
+    width: 100px;
+    height: 100px;
+}
+
+#s4 {
+    top: 400px;
+    left: 70px;
+    width: 50px;
+    height: 50px;
+}
+
+#s5 {
+    top: 300px;
+    left: 170px;
+    width: 50px;
+    height: 50px;
+}
+
+#s6 {
+    top: 500px;
+    left: -30px;
+    width: 50px;
+    height: 50px;
+}
+
+.slowZone {
+    position: absolute;
+    background-image: url(mud.png);
 }
 
 #rock1 {
@@ -146,6 +232,7 @@ body {
     left: 700px;
     rotate: 0deg;
 }
+
 #rock1hitbox {
     z-index: 6;
     width: 55px;
@@ -153,6 +240,7 @@ body {
     top: 60px;
     left: 715px;
 }
+
 #rock2 {
     position: absolute;
     z-index: 6;
@@ -163,6 +251,7 @@ body {
     left: 100px;
     rotate: 230deg;
 }
+
 #rock2hitbox {
     z-index: 6;
     width: 75px;
@@ -170,6 +259,7 @@ body {
     top: 500px;
     left: 100px;
 }
+
 #rock3 {
     position: absolute;
     z-index: 6;
@@ -180,6 +270,7 @@ body {
     left: 700px;
     rotate: 160deg;
 }
+
 #rock3hitbox {
     z-index: 6;
     width: 72px;
@@ -187,6 +278,7 @@ body {
     top: 705px;
     left: 705px;
 }
+
 #rock4 {
     position: absolute;
     z-index: 6;
@@ -197,6 +289,7 @@ body {
     left: 220px;
     rotate: 160deg;
 }
+
 #rock4hitbox {
     z-index: 6;
     width: 72px;
@@ -204,6 +297,7 @@ body {
     top: 500px;
     left: 220px;
 }
+
 #rock5 {
     position: absolute;
     z-index: 6;
@@ -214,6 +308,7 @@ body {
     left: 260px;
     rotate: -20deg;
 }
+
 #rock5hitbox {
     z-index: 6;
     width: 72px;
@@ -221,6 +316,7 @@ body {
     top: 560px;
     left: 260px;
 }
+
 #rock6 {
     position: absolute;
     z-index: 6;
@@ -231,6 +327,7 @@ body {
     left: 330px;
     rotate: 160deg;
 }
+
 #rock6hitbox {
     z-index: 6;
     width: 72px;
@@ -246,16 +343,19 @@ body {
     top: 20px;
     left: 25px;
 }
-.teleport1{
+
+.teleport1 {
     width: 38px;
     height: 55px;
     position: absolute;
 }
+
 #Altar1 {
     background-image: url(Altar.png);
     top: 500px;
     left: 300px;
 }
+
 #caveenter {
     background-image: url(Caveenter.png);
     width: 125px;
@@ -263,6 +363,7 @@ body {
     top: 300px;
     left: 700px;
 }
+
 #caveblocker1 {
     width: 1px;
     height: 125px;
@@ -270,26 +371,59 @@ body {
     left: 698px;
 }
 
+
+
+
+
+
+
+/*Mājas lauks*/
 #HomeField {
     display: flex;
     position: center;
-    width: 800px;
-    height: 800px;
+    width: 400px;
+    height: 400px;
     position: relative;
     margin: 20px auto;
     background-color: rgb(252, 184, 82);
     box-shadow: 0 0 25px 30px rgb(252, 184, 82);
-    
+
 }
 
 #homeleave {
     background-color: black;
     width: 125px;
     height: 1px;
-    top: 799px;
-    left: 300px;
+    top: 399px;
+    left: 150px;
 }
 
+#bed1 {
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    width: 80px;
+    height: 30px;
+    top: 0px;
+    left: 320px;
+}
+
+#bed2 {
+    background-color: rgb(0, 156, 247);
+    width: 80px;
+    height: 90px;
+    top: 30px;
+    left: 320px;
+}
+
+
+
+
+
+
+
+
+
+/*Alas lauks*/
 #CaveField {
     display: none;
     display: flex;
@@ -301,6 +435,7 @@ body {
     background-color: rgb(92, 92, 92);
     box-shadow: 0 0 25px 30px rgb(92, 92, 92);
 }
+
 #caveleave {
     background-color: black;
     width: 125px;
@@ -308,12 +443,14 @@ body {
     top: 700px;
     left: 300px;
 }
+
 #caveblocker2 {
     width: 1px;
     height: 125px;
     top: 703px;
     left: 430px;
 }
+
 #caveblocker3 {
     width: 1px;
     height: 125px;
@@ -330,6 +467,7 @@ body {
     background-image: url(Object.png);
     position: absolute;
 }
+
 #RandomMover1 {
     z-index: 9;
     top: 200px;
@@ -337,6 +475,7 @@ body {
     width: 20px;
     height: 20px;
 }
+
 #RandomMover2 {
     z-index: 9;
     top: 600px;
@@ -344,6 +483,7 @@ body {
     width: 20px;
     height: 20px;
 }
+
 #rock7 {
     position: absolute;
     z-index: 6;
@@ -354,6 +494,7 @@ body {
     left: 330px;
     rotate: 160deg;
 }
+
 #rock7hitbox {
     z-index: 6;
     width: 72px;
@@ -361,6 +502,7 @@ body {
     top: 435px;
     left: 335px;
 }
+
 #rock8 {
     position: absolute;
     z-index: 6;
@@ -371,6 +513,7 @@ body {
     left: 530px;
     rotate: 260deg;
 }
+
 #rock8hitbox {
     z-index: 6;
     width: 57px;
@@ -392,25 +535,46 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 #buttonshow {
     color: white;
     padding: 14px 16px;
     font-size: 17px;
 }
+
 #upButton {
     display: none;
 }
+
 #downButton {
     display: none;
 }
+
 #leftButton {
     display: none;
 }
+
 #rightButton {
     display: none;
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*To do*/
 #todo-form {
     display: flex;
     justify-content: center;
@@ -446,14 +610,16 @@ body {
     align-items: center;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    word-wrap: break-word; /* Lai aplauztu tekstu */
+    word-wrap: break-word;
+    /* Lai aplauztu tekstu */
 }
 
 
 
 .todo-text {
     max-width: 300px;
-    word-wrap: break-word; /* Aplauž tekstu, ja tas ir garš */
+    word-wrap: break-word;
+    /* Aplauž tekstu, ja tas ir garš */
 }
 
 .delete-btn {
